fixed -webkit issue found on safari and other browsers

--- a/src/components/atoms/button/styles/button.css
+++ b/src/components/atoms/button/styles/button.css
@@ -21,7 +21,7 @@
     margin-top: var(--spacing-xs);
     padding: clamp(2px, 0.5vw, 4px) var(--spacing-xs);
   }
-  
+
   @media (max-height: 600px) {
     margin-top: var(--spacing-xxl);
     padding: clamp(2px, 0.3vh, 4px) var(--spacing-xs);
@@ -33,6 +33,8 @@
   font-size: clamp(29px, 6vw, 58px);
   margin-block: 0;
   z-index: 2;
+  color: white;
+  -webkit-text-fill-color: white;
   -webkit-text-stroke: 15px black;
   paint-order: stroke fill;
 
