--- a/src/components/organisms/modals/scoreModal/styles/score-modal.css
+++ b/src/components/organisms/modals/scoreModal/styles/score-modal.css
@@ -53,6 +53,9 @@
   font-size: clamp(32px, 10vh, 72px);
   line-height: clamp(34px, 10vh, 74px);
   -webkit-text-stroke: black 1px;
+  -webkit-text-fill-color: white;
+  paint-order: stroke fill;
+  color: white;
 }
 
 /* ========================================
